GitPods/templates/TLSRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute

metadata:
  name: gitpods

  labels:
    wan-mode: 'public'

spec:
  parentRefs:
    - name: ingress-tls
      kind: Gateway
      group: gateway.networking.k8s.io

  hostnames:
    - 'gitpods.writemy.codes'
    - '*.gitpods.writemy.codes'
    - '*.ws.gitpods.writemy.codes'

  rules:
    - backendRefs:
        - name: proxy
          port: 443
          weight: 1
          kind: Service
          group: ""
